Update Tokyo Olympic Transformation.ipynb

--- a/Tokyo Olympic Transformation.ipynb
+++ b/Tokyo Olympic Transformation.ipynb
@@ -100,9 +100,9 @@
     "\n",
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"3ec0076a-9a08-4a67-b0f3-b48fb8625f99\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": 'U1A8Q~8UO6dt7otuLMhG3TVypZDOxq1ILBN6BbRv',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/658964e5-494a-4b85-802c-254c7417e55c/oauth2/token\"}\n",
+    "\"fs.azure.account.oauth2.client.id\": \"clientid",\n",
+    "\"fs.azure.account.oauth2.client.secret\": 'secretid',\n",
+    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/tokenid/oauth2/token\"}\n",
     "\n",
     "\n",
     "dbutils.fs.mount(\n",
